--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   -->
   <artifactId>oauth-credentials</artifactId>
   <packaging>hpi</packaging>
-  <version>0.3-SNAPSHOT</version>
+  <version>0.3</version>
 
   <name>OAuth Credentials plugin</name>
   <description>
