--- a/pom.xml
+++ b/pom.xml
@@ -49,9 +49,9 @@
   </developers>
 
   <scm>
-    <connection>scm:git:git://github.com/jenkinsci/oauth-credentials.git</connection>
-    <developerConnection>scm:git:git@github.com:jenkinsci/oauth-credentials.git</developerConnection>
-    <url>http://github.com/jenkinsci/oauth-credentials</url>
+    <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}.git</connection>
+    <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}.git</developerConnection>
+    <url>http://github.com/jenkinsci/${project.artifactId}</url>
     <tag>HEAD</tag>
   </scm>
 
@@ -88,6 +88,42 @@
 	<configuration>
 	  <disabledTestInjection>true</disabledTestInjection>
 	</configuration>
+      </plugin>
+      <plugin>
+	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-checkstyle-plugin</artifactId>
+	<version>2.9</version>
+	<configuration>
+	  <includeTestSourceDirectory>true</includeTestSourceDirectory>
+	  <configLocation>checkstyle.xml</configLocation>
+	  <failsOnError>true</failsOnError>
+	  <violationSeverity>warning</violationSeverity>
+          <consoleOutput>true</consoleOutput>
+	</configuration>
+       <executions>
+         <execution>
+           <goals>
+             <goal>check</goal>
+           </goals>
+         </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>findbugs-maven-plugin</artifactId>
+        <version>2.3.2</version>
+        <configuration>
+          <effort>Max</effort>
+          <threshold>Medium</threshold>
+          <xmlOutput>true</xmlOutput>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
 	<groupId>org.codehaus.mojo</groupId>
