--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 
   <artifactId>oauth-credentials</artifactId>
   <packaging>hpi</packaging>
-  <version>0.4-SNAPSHOT</version>
+  <version>${revision}${changelist}</version>
 
   <name>OAuth Credentials plugin</name>
   <description>
@@ -50,10 +50,12 @@
     <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
-    <tag>HEAD</tag>
+    <tag>${scmTag}</tag>
   </scm>
 
   <properties>
+    <revision>0.4</revision>
+    <changelist>-SNAPSHOT</changelist>
     <jenkins.version>2.138.4</jenkins.version>
     <java.level>8</java.level>
   </properties>
