Add new maintainers to project configuration
As @varyvol and I took maintainance role, as per
jenkins-infra/repository-permissions-updater#1335.

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,14 @@
       <id>mattmoor</id>
       <name>Matt Moore</name>
     </developer>
+    <developer>
+      <id>alecharp</id>
+      <name>Adrien Lecharpentier</name>
+    </developer>
+    <developer>
+      <id>varyvol</id>
+      <name>Evaristo Gutierrez</name>
+    </developer>
   </developers>
 
   <scm>
