--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
   <artifactId>oauth-credentials</artifactId>
   <packaging>hpi</packaging>
-  <version>0.4</version>
+  <version>${revision}${changelist}</version>
 
   <name>OAuth Credentials plugin</name>
   <description>
@@ -57,11 +57,11 @@
     <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
-    <tag>oauth-credentials-0.4</tag>
+    <tag>${scmTag}</tag>
   </scm>
 
   <properties>
-    <revision>0.4</revision>
+    <revision>0.5</revision>
     <changelist>-SNAPSHOT</changelist>
     <jenkins.version>2.138.4</jenkins.version>
     <java.level>8</java.level>
