--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,12 @@
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
     <version>4.29</version>
-    <relativePath/>
+    <relativePath />
   </parent>
 
   <artifactId>oauth-credentials</artifactId>
   <packaging>hpi</packaging>
-  <version>${revision}${changelist}</version>
+  <version>0.5</version>
 
   <name>OAuth Credentials plugin</name>
   <description>
@@ -58,7 +58,7 @@
     <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
-    <tag>${scmTag}</tag>
+    <tag>oauth-credentials-0.5</tag>
   </scm>
 
   <properties>
