--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 
   <artifactId>oauth-credentials</artifactId>
   <packaging>hpi</packaging>
-  <version>0.5</version>
+  <version>${revision}${changelist}</version>
 
   <name>OAuth Credentials plugin</name>
   <description>
@@ -58,11 +58,11 @@
     <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
-    <tag>oauth-credentials-0.5</tag>
+    <tag>${scmTag}</tag>
   </scm>
 
   <properties>
-    <revision>0.5</revision>
+    <revision>0.6</revision>
     <changelist>-SNAPSHOT</changelist>
     <bom>2.222.x</bom>
     <jenkins.version>2.222.4</jenkins.version>
