--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>4.29</version>
+    <version>4.61</version>
     <relativePath />
   </parent>
 
@@ -64,9 +64,8 @@
   <properties>
     <revision>0.6</revision>
     <changelist>-SNAPSHOT</changelist>
-    <bom>2.222.x</bom>
-    <jenkins.version>2.222.4</jenkins.version>
-    <java.level>8</java.level>
+    <bom>2.361.x</bom>
+    <jenkins.version>2.361.1</jenkins.version>
   </properties>
 
   <dependencyManagement>
@@ -74,7 +73,7 @@
       <dependency>
         <groupId>io.jenkins.tools.bom</groupId>
         <artifactId>bom-${bom}</artifactId>
-        <version>887.vae9c8ac09ff7</version>
+        <version>2000.v4677a_6e0ffea</version>
         <scope>import</scope>
         <type>pom</type>
       </dependency>
@@ -93,12 +92,11 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>org.hamcrest</groupId>
-          <artifactId>hamcrest-core</artifactId>
-        </exclusion>
-      </exclusions>
+    </dependency>
+    <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest</artifactId>
+        <version>2.2</version>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
@@ -106,15 +104,6 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-
-  <reporting>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-      </plugin>
-    </plugins>
-  </reporting>
 
   <repositories>
     <repository>
