--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,7 @@
   <properties>
     <revision>0.6</revision>
     <changelist>-SNAPSHOT</changelist>
+    <hpi.bundledArtifacts />
     <hpi.strictBundledArtifacts>true</hpi.strictBundledArtifacts>
     <!-- https://www.jenkins.io/doc/developer/plugin-development/choosing-jenkins-baseline/ -->
     <jenkins.baseline>2.479</jenkins.baseline>
